--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bootstrap5-snippets",
-  "displayName": "bootstrap5 snippets",
+  "displayName": "Bootstrap5 Snippets",
   "description": "Bootstrap 5 Snippet for Visual Studio Code",
   "icon": "bootstrap-5.jpg",
   "publisher": "adereksisusanto",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.53.0"
   },
@@ -13,6 +13,10 @@
     "snippets",
     "html"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adereksisusanto/bootstrap5-snippets.git"
+  },
   "categories": [
     "Snippets"
   ],
