--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@adereksisusanto/icons": "^1.0.3",
     "bootstrap": "^4.6.0",
     "highlight.js": "^10.6.0",
+    "highlightjs-badge": "^0.1.9",
     "jquery": "^3.5.1",
     "jquery.scrollto": "^2.1.3",
     "popper.js": "^1.16.1"
